c_headers/H5public.h

/*
 * Status return values.  Failed integer functions in HDF5 result almost
 * always in a negative value (unsigned failing functions sometimes return
 * zero for failure) while successfull return is non-negative (often zero).
 * The negative failure value is most commonly -1, but don't bet on it.  The
 * proper way to detect failure is something like:
 *
 * 	if((dset = H5Dopen2(file, name)) < 0)
 *	    fprintf(stderr, "unable to open the requested dataset\n");
 */
typedef int herr_t;
/*
 * The sizes of file objects have their own types defined here, use a 64-bit
 * type.
 */
/* #if H5_SIZEOF_LONG_LONG >= 8 */
/* H5_GCC_DIAG_OFF(long-long) */
typedef unsigned long long 	hsize_t;
    typedef unsigned                haddr_t;
    typedef unsigned long           haddr_t;
    typedef unsigned long long      haddr_t;